<resources>
    <string name="app_name">User</string>
    <string name="please_enter_your_username">Please enter your Username</string>
    <string name="please_enter_your_password">Please enter your Password</string>
    <string name="please_enter_your_email_address">Please enter your Email Address</string>
    <string name="please_enter_your_phone_number">Please enter your Phone Number</string>
    <string name="submit">Submit</string>
    <string name="displayedusernametext">displayedUsernameText</string>
    <string name="displayedpasswordtext">displayedPasswordText</string>
    <string name="displayedemailtext">displayedEmailText</string>
    <string name="displayedphonenumbertext">displayedPhoneNumberText</string>
</resources>
